--- a/Ollama_Setup.ipynb
+++ b/Ollama_Setup.ipynb
@@ -78,11 +78,11 @@
         "!sudo apt-get install -y zstd"
       ],
       "metadata": {
-        "id": "55DihTnMao8f",
-        "outputId": "784b2103-dca9-40ec-b97d-e8e321ba1605",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "55DihTnMao8f",
+        "outputId": "784b2103-dca9-40ec-b97d-e8e321ba1605"
       },
       "execution_count": 2,
       "outputs": [
@@ -139,10 +139,10 @@
       ],
       "metadata": {
         "id": "YlVK9iG4AD5L",
-        "outputId": "cf24941f-3442-4775-e16f-e0564a0068bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cf24941f-3442-4775-e16f-e0564a0068bb"
       },
       "execution_count": 3,
       "outputs": [
@@ -257,10 +257,10 @@
       ],
       "metadata": {
         "id": "o2ghppmRDFny",
-        "outputId": "9cc80d75-37b1-4253-cb10-f60dc7fdd515",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9cc80d75-37b1-4253-cb10-f60dc7fdd515"
       },
       "execution_count": 5,
       "outputs": [
@@ -279,11 +279,11 @@
         "!ollama list"
       ],
       "metadata": {
-        "id": "vp6T9AYVcMsp",
-        "outputId": "948097a4-4edd-4b75-85a0-de631cd4a12d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vp6T9AYVcMsp",
+        "outputId": "948097a4-4edd-4b75-85a0-de631cd4a12d"
       },
       "execution_count": 8,
       "outputs": [
@@ -318,10 +318,10 @@
       ],
       "metadata": {
         "id": "MbrT39oil6tK",
-        "outputId": "46f4f2d0-3d49-44dc-b5f8-54ad28561c12",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "46f4f2d0-3d49-44dc-b5f8-54ad28561c12"
       },
       "execution_count": 6,
       "outputs": [
@@ -372,11 +372,11 @@
         "!pip install faster-whisper"
       ],
       "metadata": {
-        "id": "_kwqJKvDep7T",
-        "outputId": "ac754387-dca1-4815-9fe4-f51b661c95fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_kwqJKvDep7T",
+        "outputId": "ac754387-dca1-4815-9fe4-f51b661c95fd"
       },
       "execution_count": 9,
       "outputs": [
@@ -451,11 +451,11 @@
         "print(text)\n"
       ],
       "metadata": {
-        "id": "dJQib0CDfz3s",
-        "outputId": "1c4842a0-53e3-4a0d-ea65-af52d5de79e0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dJQib0CDfz3s",
+        "outputId": "1c4842a0-53e3-4a0d-ea65-af52d5de79e0"
       },
       "execution_count": 14,
       "outputs": [
@@ -528,7 +528,7 @@
         "\n",
         "llm = OllamaLLM(\n",
         "    model=\"llama3.2\",\n",
-        "    temperature=0.1  # lower = more accurate extraction\n",
+        "    temperature=0.1\n",
         ")\n",
         "\n",
         "chain = prompt | llm"
@@ -550,11 +550,11 @@
       ],
       "metadata": {
         "id": "9quBP56zDvpt",
-        "outputId": "a922b2bb-e1cd-4b48-bea4-56fd517257be",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 46
-        }
+        },
+        "outputId": "a922b2bb-e1cd-4b48-bea4-56fd517257be"
       },
       "execution_count": 24,
       "outputs": [
